force-app/main/default/objects/Route_Equipment__c/Route_Equipment__c.object-meta.xml
<CustomObject>
    <label>Route Equipment</label>
    <nameField>
        <displayFormat>REQ-{00000}</displayFormat>
        <label>Route Equipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Equipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>