force-app/main/default/objects/Route_Equipment__c/fields/Cargo_Details__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Details__c</fullName>
    <label>Cargo Details</label>
    <type>TextArea</type>
</CustomField>