force-app/main/default/objects/Route_Equipment__c/fields/Chargeable_Weight__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Weight__c</fullName>
    <formula>IF( (CBM__c * 167)&gt;  Weight_Kgs__c , CBM__c , Weight_Kgs__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chargeable Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>