force-app/main/default/objects/Route_Equipment__c/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <formula>Route__r.Enquiry__r.Name</formula>
    <label>Enquiry</label>
    <type>Text</type>
</CustomField>