force-app/main/default/objects/Route_Equipment__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment Type</label>
    <referenceTo>Equipment_Type__c</referenceTo>
    <relationshipName>Enquiry_Equipments</relationshipName>
    <type>Lookup</type>
</CustomField>