force-app/main/default/objects/Route_Equipment__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>Length</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>