force-app/main/default/objects/Route_Equipment__c/fields/Palletized__c.field-meta.xml
<CustomField>
    <fullName>Palletized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Palletized</label>
    <type>Checkbox</type>
</CustomField>