force-app/main/default/objects/Route_Equipment__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <formula>Route__r.Enquiry__r.Lead__r.Name</formula>
    <label>Related To</label>
    <type>Text</type>
</CustomField>