force-app/main/default/objects/Route_Equipment__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Route Equipments</relationshipLabel>
    <relationshipName>Route_Equipments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>