force-app/main/default/objects/Route_Equipment__c/fields/Tab_View__c.field-meta.xml
<CustomField>
    <fullName>Tab_View__c</fullName>
    <formula>IF( Route__r.Opportunity_Enquiry__r.RecordType.Name ==  &apos;Air Freight&apos;, &apos;Total CBM Weight :&apos;&amp; Text( Route__r.Total_CBM__c ) &amp;&apos; Total Gross Weight:&apos;&amp; Text( Route__r.Total_Gross_Weight_KGs__c ) &amp;&apos; Total Volumetric Weight : &apos;&amp; Text( Route__r.Total_Volumetric_Weight__c ), &apos;CBM : &apos;&amp; Text(CBM__c) &amp;&apos; | Weight : &apos;&amp; Text(Weight_Kgs__c) &amp;&apos; | Units : &apos;&amp;Text(Units__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tab View</label>
    <type>Text</type>
</CustomField>