force-app/main/default/objects/Route_Equipment__c/fields/Teusnew__c.field-meta.xml
<CustomField>
    <fullName>Teusnew__c</fullName>
    <label>Teusnew</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>