force-app/main/default/objects/Route_Equipment__c/fields/Teusold__c.field-meta.xml
<CustomField>
    <fullName>Teusold__c</fullName>
    <label>Teusold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>