force-app/main/default/objects/Route_Equipment__c/fields/Volumetric_weight_Kgs__c.field-meta.xml
<CustomField>
    <fullName>Volumetric_weight_Kgs__c</fullName>
    <label>Volumetric weight(Kgs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>