force-app/main/default/objects/Route_Equipment__c/fields/Weight_Kgs__c.field-meta.xml
<CustomField>
    <fullName>Weight_Kgs__c</fullName>
    <label>Weight(Kgs)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>